--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -38,6 +38,10 @@ body
             = link_to 'Портфолио', portfolio_path
           li
             = link_to 'Контакты', contacts_path
+          - if user_signed_in?
+            li
+              = link_to 'ADMIN', admin_path
+
 
   .col-md-8.col-md-offset-2
     = yield
