--- a/app/views/main/contacts.html.slim
+++ b/app/views/main/contacts.html.slim
@@ -20,4 +20,4 @@
     strong   Наш email:
     |   first.last@example.com
 .col-md-6
-  script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=Gt8dSh3E2uh3-3AOv9GOezPDXpy9ltzi&width=600&height=450"
+  script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=lK4IHwVdfVdIqw6d1XAczcfhnXXOyKaS&width=600&height=450"he
